work on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -4,391 +4,10 @@
     <script src="js/react-0.12.2.js"></script>
     <script src="js/JSXTransformer-0.12.2.js"></script>
     <script src="js/jquery-1.10.0.min.js"></script>
-    <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <link rel="stylesheet" href="css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="css/dataTables.tableTools.css">
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.dataTables.min.js"></script>
-    <script src="js/dataTables.tableTools.js"></script>
-    <style>
-      .prefix { color: blue; font-weight: bold; }
-      .suffix { color: grey; }
-      #results .ui-selected { background-color: lightyellow;}
-      #results tbody { cursor: pointer; }
-    </style>
+    <script type="text/jsx" src="js/App.js"></script>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx">
-      var DictionaryApp = React.createClass({
-        getInitialState: function() {
-          return {
-            query: "",
-            inputValue: "",
-            results: [],
-            replacements: [],
-            wordTokenInfo: [],
-            message: "",
-            target: "",
-            dictionaries: {},
-            hideEntries: false
-          };
-        },
-        request: null,
-        addDictionary: function(name) {
-          var dicts = this.state.dictionaries;
-          if (!(name in dicts)) {
-            dicts[name] = [];
-            this.setState({dictionaries: dicts, target: name});
-          }
-        },
-        addDictionaryEntry: function(name, value) {
-          var dicts = this.state.dictionaries;
-          if (name in dicts && dicts[name].indexOf(value) < 0) {
-            dicts[name].push(value);
-            this.setState({dictionaries: dicts});
-          }
-        },
-        updateTarget: function(e) {
-          this.setState({target: e.target.value});
-        },
-        deleteDictionaryEntry: function(name, value) {
-          var dicts = this.state.dictionaries;
-          if (name in dicts && dicts[name].indexOf(value) >= 0) {
-            var i = dicts[name].indexOf(value);
-            dicts[name].splice(i, i+1);
-            this.setState({dictionaries: dicts});
-          }
-        },
-        updateResults: function() {
-          if (this.request != null) {
-            this.request.abort();
-          }
-          if (this.state.query == '')  { return; }
-          var data = {
-            query: this.state.query,
-            replacements: this.state.replacements,
-            dictionaries: this.state.dictionaries
-          };
-          var r = {
-            type: "POST",
-            url: "/api/execute",
-            contentType: "application/json",
-            data: JSON.stringify(data)
-          };
-          this.request = $.ajax(r).success(function(results) {
-            this.setState({results: results, message: ""});
-          }.bind(this));
-          this.setState({message: "Loading...", results: []});
-        },
-        handleSubmit: function(e) {
-          e.preventDefault();
-          var clearedState = {query: this.state.inputValue, replacements: [],
-            wordTokenInfo: [], results: []};
-          this.setState(clearedState, this.afterSubmit);
-        },
-        afterSubmit: function() {
-          this.updateResults();
-          this.updateWordTokenInfo();
-        },
-        inputBoxChange: function(e) {
-          this.setState({inputValue: e.target.value});
-        },
-        updateWordTokenInfo: function() {
-          if (this.state.query == "") { return; }
-          var data = { query: this.state.query };
-          var request = {
-            type: "POST",
-            url: "/api/wordTokenInfo",
-            contentType: "application/json",
-            data: JSON.stringify(data)
-          };
-          $.ajax(request).success(function(results) {
-            this.setState({wordTokenInfo: results});
-          }.bind(this));
-        },
-
-        sliderCallback: function(offset, cluster, value) {
-          var replacements = this.state.replacements;
-          for (var i = 0; i < replacements.length; i++) {
-            if (replacements[i].offset == offset) {
-              break;
-            }
-          }
-          if (i < replacements.length) {
-            replacements.splice(i, i+1);
-          }
-          if (value < cluster.length) {
-            var prefix = cluster.slice(0, value);
-            var replacement = {offset: offset, clusterPrefix: prefix};
-            replacements.push(replacement);
-          }
-          this.setState({replacements: replacements});
-          this.updateResults();
-        },
-        toggleHideEntries: function() {
-          this.setState({hideEntries: !this.state.hideEntries});
-        },
-        render: function() {
-          var query = this.state.query;
-          return (
-            <div>
-              <div id="controlPane">
-                <Dictionaries target={this.state.target} dictionaries={this.state.dictionaries} update={this.updateTarget} deleteEntry={this.deleteDictionaryEntry} addDictionary={this.addDictionary}/>
-                <HideEntries hideEntries={this.state.hideEntries} toggleHideEntries={this.toggleHideEntries}/>
-                <InputBox inputValue={this.state.inputValue} handleChange={this.inputBoxChange} handleSubmit={this.handleSubmit}/>
-              </div>
-              <WordTokenInfos key={query} replacements={this.state.replacements} sliderCallback={this.sliderCallback} wordTokenInfo={this.state.wordTokenInfo} />
-              <div id="resultsPane">
-                <Results dictionaries={this.state.dictionaries} message={this.state.message} results={this.state.results} addDictionaryEntry={this.addDictionaryEntry} target={this.state.target} hideEntries={this.state.hideEntries} />
-              </div>
-            </div>
-          );
-        }
-      });
-
-      var HideEntries = React.createClass({
-        render: function() {
-          return (
-            <div>
-              Hide Entries
-              <input type="checkbox" defaultChecked={this.props.hideEntries} onClick={this.props.toggleHideEntries}/>
-            </div>
-          );
-        }
-      });
-
-      var Dictionaries = React.createClass({
-        render: function() {
-          return (
-            <div>
-              <DictionarySelector dictionaries={this.props.dictionaries} target={this.props.target} update={this.props.update}/>
-              <DictionaryCreator addDictionary={this.props.addDictionary}/>
-              <DictionaryDisplay dictionaries={this.props.dictionaries} target={this.props.target} deleteEntry={this.props.deleteEntry}/>
-            </div>
-          );
-        }
-      });
-
-      var DictionaryCreator = React.createClass({
-        getInitialState: function() {
-          return {value: ""};
-        },
-        handleChange: function(e) {
-          this.setState({value: e.target.value});
-        },
-        addDictionary: function(e) {
-          e.preventDefault();
-          this.props.addDictionary(this.state.value);
-          this.setState({value: ""});
-        },
-        render: function() {
-          return (
-            <form onSubmit={this.addDictionary}>
-              <input value={this.state.value} onChange={this.handleChange} placeholder="add dictionary"/>
-              <button>Add</button>
-            </form>
-          );
-        }
-      });
-
-      var DictionaryDisplay = React.createClass({
-        render: function() {
-          var target = this.props.target;
-          var entries = [];
-          if (target in this.props.dictionaries) {
-            entries = this.props.dictionaries[target];
-          }
-          var deleteEntry = this.props.deleteEntry;
-          var createEntry = function(e) {
-            var deleteFn = function() { deleteEntry(target, e); };
-            return (
-              <li key={target + ' ' + e}>
-                <div>{e}</div>
-                <div><button onClick={deleteFn}>Delete</button></div>
-              </li>
-            );
-          }.bind(this);
-          return (
-            <ul>{entries.map(createEntry)}</ul>
-          );
-        }
-      });
-
-      var DictionarySelector = React.createClass({
-        render: function() {
-          var target = this.props.target;
-          var names = Object.keys(this.props.dictionaries);
-          var createItem = function(name) {
-            return <option key={name} value={name}>{name}</option>;
-          };
-          return (
-            <select defaultValue={target} onChange={this.props.update}>{names.map(createItem)}}</select>
-          );
-        }
-      });
-
-      var InputBox = React.createClass({
-        render: function() {
-          return (
-            <form onSubmit={this.props.handleSubmit}>
-              <input value={this.props.inputValue} onChange={this.props.handleChange}/>
-              <button>Submit</button>
-            </form>
-          );
-        }
-      });
-
-      var WordTokenInfos = React.createClass({
-        render: function() {
-          var query = this.props.query;
-          var createInfo = function(i) {
-            var key = query + ' ' + i.position.index
-            return <WordTokenInfo word={i.word} cluster={i.cluster} offset={i.position.offset} key={key} sliderCallback={this.props.sliderCallback}/>
-          }.bind(this);
-          return <ul>{this.props.wordTokenInfo.map(createInfo)}</ul>;
-        }
-      });
-
-      var WordTokenInfo = React.createClass({
-        getInitialState: function() {
-          return {sliderValue: this.props.cluster.length + 1};
-        },
-        sliderChange: function(e) {
-          var sliderValue = e.target.value;
-          this.props.sliderCallback(this.props.offset, this.props.cluster, sliderValue);
-          this.setState({sliderValue: e.target.value});
-        },
-        render: function() {
-          var word = this.props.word;
-          var cluster = this.props.cluster;
-          var max = cluster.length + 1;
-          return (
-            <li>
-              <div>{word}</div>
-              <ClusterDisplay cluster={cluster} sliderValue={this.state.sliderValue}/>
-              <ClusterSlider max={max} sliderValue={this.state.sliderValue} sliderChange={this.sliderChange} />
-            </li>
-          );
-        }
-      });
-
-      var ClusterDisplay = React.createClass({
-        render: function() {
-          var cluster = this.props.cluster + 'w';
-          var n = this.props.sliderValue;
-          var prefix = cluster.slice(0, n);
-          var suffix = cluster.slice(n, cluster.length);
-          return (
-            <div>
-              <span className="prefix">{prefix}</span>
-              <span className="suffix">{suffix}</span>
-            </div>
-            );
-        }
-      });
-
-      var ClusterSlider = React.createClass({
-        getInitialState: function() {
-          return {tempVal: this.props.sliderValue};
-        },
-        updateTempValue: function(e) {
-          this.setState({tempVal: e.target.value});
-        },
-        keyupChange: function(e) {
-          var code = e.keyCode;
-          if (code == 37 || code == 38 || code == 39 || code == 40) {
-            this.props.sliderChange(e);
-          }
-        },
-        render: function() {
-          var max = this.props.max;
-          return (
-            <div>
-              <input type="range" min="0" max={max} value={this.state.tempVal} onChange={this.updateTempValue} onMouseUp={this.props.sliderChange} onKeyUp={this.keyupChange}/>
-            </div>
-          );
-        }
-      });
-
-      var Results = React.createClass({
-        addSelected: function() {
-          var toAdd = [];
-          $("#results .ui-selected").each(function() {
-            var index = $( "#results tr" ).index(this);
-            toAdd.push(index);
-          });
-          console.log(toAdd);
-        },
-        render: function() {
-          var createRow = function(row) {
-            return <ResultsRow value={row.captureGroup} count={row.count} key={row.captureGroup} target={this.props.target} addDictionaryEntry={this.props.addDictionaryEntry} hideEntires={this.props.hideEntries}/>;
-          }.bind(this);
-          var results = this.props.results.filter(function(r) {
-            var value = r.captureGroup;
-            var target = this.props.target;
-            var dicts = this.props.dictionaries;
-            var inDict = (target in dicts) && dicts[target].indexOf(value) >= 0;
-            return !this.props.hideEntries || !inDict;
-          }.bind(this));
-          return (
-            <div>
-            <div>{this.props.message}</div>
-            <button onClick={this.addSelected}>Add Selected</button>
-            <table id="results" className="display">
-              <thead>
-                <tr>
-                  <th>Candidate String</th>
-                  <th>Count</th>
-                </tr>
-              </thead>
-              <tbody>
-                {results.map(createRow)}
-              </tbody>
-            </table>
-            </div>
-          );
-        },
-        componentDidMount: function() {
-          var $r = $('#results tbody');
-          $r.selectable({
-            selected: function (event, ui) {
-                if ($(ui.selected).hasClass('click-selected')) {
-                    $(ui.selected).removeClass('ui-selected click-selected');
-                } else {
-                    $(ui.selected).addClass('click-selected');
-                }
-            },
-            unselected: function (event, ui) {
-                $(ui.unselected).removeClass('click-selected');
-            },
-            stop: function() {
-              
-            }
-          });
-        }
-      });
-
-      var ResultsRow = React.createClass({
-        render: function() {
-          var add = function(e) {
-            this.props.addDictionaryEntry(this.props.target, this.props.value);
-          }.bind(this);
-          return (
-            <tr>
-              <td>{this.props.value}</td>
-              <td>{this.props.count}</td>
-            </tr>
-          );
-        }
-      });
-
-      var data = {
-        wordTokenInfo: [{ "word": "using", "cluster": "00011111110", "position": { "index": 0, "offset": [0, 5] } }, { "word": "information", "cluster": "10111111101", "position": { "index": 1, "offset": [7, 18] } }, { "word": "extraction", "cluster": "101111010010", "position": { "index": 2, "offset": [19, 29] } }],
-        results: [{ "captureGroup": "information extraction", "count": 3 }]
-      };
-
-      React.render(<DictionaryApp data={data}/>, document.getElementById('content'));
-    </script>
   </body>
 </html>
