--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div id="content"></div>
+    <header><div class="max-width-content"><h3 class="header-title-text">Dictionary Builder</h3><div></header>
+    <section>
+      <div id="content"></div>
+    </section>
     <script src="App.js"></script>
   </body>
 </html>
