--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -6,7 +6,7 @@
   <body>
     <header><div class="max-width-content"><h3 class="header-title-text">Dictionary Builder</h3><div></header>
     <section>
-      <div id="content"></div>
+      <section id="content"></section>
     </section>
     <script src="App.js"></script>
   </body>
