--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -1,12 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Buildin' Them Electric Dictionaries</title>
-    <link rel="stylesheet" href="main.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dictionary Builder</title>
+    <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <header><div class="max-width-content"><h3 class="header-title-text">Dictionary Builder</h3><div></header>
+    <heading>
+      <div class="page-header">
+        <h2>Dictionary Builder</h2>
+      </div>
+    </heading>
     <section>
-      <section id="content"></section>
+      <div class="col-md-8" id="content"></div>
     </section>
     <script src="App.js"></script>
   </body>
