--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -8,6 +8,6 @@
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <script src="App.js"></script>
+    <script src="DictApp.js"></script>
   </body>
 </html>
