--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dictionary Builder</title>
+    <title>OkCorpus</title>
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
