--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OkCorpus</title>
-    <link href="main.css" rel="stylesheet">
+    <link href="/main.css" rel="stylesheet">
   </head>
   <body>
-    <script src="DictApp.js"></script>
+    <script src="/DictApp.js"></script>
   </body>
 </html>
