--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-signin-client_id" content="793503486502-8q1pf7shj3jq7ak2q8ib1ca5hlufdfv7.apps.googleusercontent.com">
+    <meta name="google-signin-scope" content="profile" />
     <title>OkCorpus</title>
     <link href="/main.css" rel="stylesheet">
   </head>
   <body>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://apis.google.com/js/client:platform.js" async defer></script>
     <script src="/DictApp.js"></script>
   </body>
 </html>
