--- a/webapp/app/index.html
+++ b/webapp/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-signin-scope" content="profile" />
-    <title>OkCorpus</title>
+    <title>IKE</title>
     <link href="/main.css" rel="stylesheet">
   </head>
   <body>
